fix layout issues with left sidebar

--- a/components/webui/src/components/app.scss
+++ b/components/webui/src/components/app.scss
@@ -21,8 +21,7 @@
         display: flex;
         flex-direction: row;
         background: #eee;
-        flex: 0 0 fill;
-        height: 100%;
+        flex: 0 0 auto;
         
         .item-selector {
             min-width: 200px;
@@ -40,7 +39,6 @@
             display: flex;
         }
 
-            
         .app-sidebar {
             display: flex;
             flex-direction: column;
@@ -51,6 +49,7 @@
             transition: width 100ms;
             align-content: flex-start;
             width: 125px;
+            height: fill;
         
             .divider {
                 height: 1px;
